@@ -19,7 +19,7 @@ module PluginAWeek #:nodoc:
                       :extend => EmailAddress::StateExtension
           
           # Add associations for all emails the model has sent and received
-          has_many  :received_emails,
+          has_many  :email_recipients,
                       :through => :email_addresses
           has_many  :unsent_emails,
                       :through => :email_addresses
@@ -39,6 +39,13 @@ module PluginAWeek #:nodoc:
       end
       
       module InstanceMethods
+        # All emails this model has received
+        def received_emails
+          email_recipients.find_in_states(:all, :unread, :read).collect do |recipient|
+            ReceivedMessage.new(recipient)
+          end
+        end
+        
         # Contains all of the emails that have been sent and received
         def email_box
           @email_box ||= MessageBox.new(received_emails, unsent_emails, sent_emails)
