@@ -1,78 +1,78 @@
 bob_to_john:
   id: 1
   message_id: 1
-  messageable_id: 2
-  messageable_type: EmailAddress
+  receiver_id: 2
+  receiver_type: EmailAddress
   kind: to
   position: 1
-  state_id: 521
+  state_id: 512
   type: EmailRecipient
   
 bob_to_mary:
   id: 2
   message_id: 1
-  messageable_id: 3
-  messageable_type: EmailAddress
+  receiver_id: 3
+  receiver_type: EmailAddress
   kind: cc
   position: 1
-  state_id: 521
+  state_id: 511
   type: EmailRecipient
   
 bob_to_random:
   id: 3
   message_id: 1
-  messageable_spec: random@random.com
+  receiver_spec: random@random.com
   kind: cc
   position: 2
-  state_id: 521
+  state_id: 511
   type: EmailRecipient
   
 bob_to_marketing:
   id: 4
   message_id: 1
-  messageable_id: 1
-  messageable_type: Department
+  receiver_id: 1
+  receiver_type: Department
   kind: cc
   position: 3
-  state_id: 521
+  state_id: 511
   type: EmailRecipient
   
 mary_to_john:
   id: 5
-  message_id: 5
-  messageable_id: 2
-  messageable_type: EmailAddress
+  message_id: 2
+  receiver_id: 2
+  receiver_type: EmailAddress
   kind: bcc
   position: 1
-  state_id: 521
+  state_id: 511
   type: EmailRecipient
   
 unsent_bob_to_john:
   id: 6
-  message_id: 7
-  messageable_id: 2
-  messageable_type: EmailAddress
+  message_id: 3
+  receiver_id: 2
+  receiver_type: EmailAddress
   kind: to
   position: 1
-  state_id: 520
+  state_id: 510
   type: EmailRecipient
   
 unsent_bob_to_mary:
   id: 7
-  message_id: 7
-  messageable_id: 3
-  messageable_type: EmailAddress
+  message_id: 3
+  receiver_id: 3
+  receiver_type: EmailAddress
   kind: cc
   position: 1
-  state_id: 520
+  state_id: 510
   type: EmailRecipient
   
 queued_bob_to_john:
   id: 8
-  message_id: 8
-  messageable_id: 2
-  messageable_type: User
+  message_id: 4
+  receiver_id: 2
+  receiver_type: User
   kind: to
   position: 1
-  state_id: 520
+  state_id: 510
   type: EmailRecipient
