@@ -7,7 +7,7 @@ class EmailRecipientTest < Test::Unit::TestCase
     assert_valid message_recipients(:bob_to_john)
   end
   
-  def test_recipient_with_messageable_spec_should_be_valid
+  def test_recipient_with_receiver_spec_should_be_valid
     assert_valid message_recipients(:bob_to_random)
   end
   
@@ -15,19 +15,19 @@ class EmailRecipientTest < Test::Unit::TestCase
     assert_valid message_recipients(:bob_to_marketing)
   end
   
-  def test_should_require_minimum_length_for_messageable_spec
-    assert_invalid message_recipients(:bob_to_random), :messageable_spec, 'ab'
-    assert_valid message_recipients(:bob_to_random), :messageable_spec, 'a@a'
+  def test_should_require_minimum_length_for_receiver_spec
+    assert_invalid message_recipients(:bob_to_random), :receiver_spec, 'ab'
+    assert_valid message_recipients(:bob_to_random), :receiver_spec, 'a@a'
   end
   
-  def test_should_require_maximum_length_for_messageable_spec
-    assert_invalid message_recipients(:bob_to_random), :messageable_spec, 'a' * 300 + '@' + 'a' * 20
-    assert_valid message_recipients(:bob_to_random), :messageable_spec, 'a' * 300 + '@' + 'a' * 19
+  def test_should_require_maximum_length_for_receiver_spec
+    assert_invalid message_recipients(:bob_to_random), :receiver_spec, 'a' * 300 + '@' + 'a' * 20
+    assert_valid message_recipients(:bob_to_random), :receiver_spec, 'a' * 300 + '@' + 'a' * 19
   end
   
-  def test_should_require_specific_format_for_messageable_spec
-    assert_invalid message_recipients(:bob_to_random), :messageable_spec, 'aaaaaaaaaa'
-    assert_valid message_recipients(:bob_to_random), :messageable_spec, 'aaa@aaa.com'
+  def test_should_require_specific_format_for_receiver_spec
+    assert_invalid message_recipients(:bob_to_random), :receiver_spec, 'aaaaaaaaaa'
+    assert_valid message_recipients(:bob_to_random), :receiver_spec, 'aaa@aaa.com'
   end
   
   def test_email_getter_should_be_same_as_message_getter
@@ -52,24 +52,24 @@ class EmailRecipientTest < Test::Unit::TestCase
     assert_equal r.email_id, r.message_id
   end
   
-  def test_messageable_should_be_messageable_spec_if_string_recipient
-    assert_equal 'random@random.com', message_recipients(:bob_to_random).messageable
+  def test_receiver_should_be_receiver_spec_if_string_recipient
+    assert_equal 'random@random.com', message_recipients(:bob_to_random).receiver
   end
   
-  def test_messageable_should_be_model_if_not_string_recipient
-    assert_equal email_addresses(:john), message_recipients(:bob_to_john).messageable
+  def test_receiver_should_be_model_if_not_string_recipient
+    assert_equal email_addresses(:john), message_recipients(:bob_to_john).receiver
   end
   
-  def test_should_set_messageable_spec_if_messageable_is_string
+  def test_should_set_receiver_spec_if_receiver_is_string
     r = EmailRecipient.new
-    r.messageable = 'test@me.com'
-    assert_equal 'test@me.com', r.messageable_spec
+    r.receiver = 'test@me.com'
+    assert_equal 'test@me.com', r.receiver_spec
   end
   
-  def test_should_set_messageable_if_messageable_is_not_string
+  def test_should_set_receiver_if_receiver_is_not_string
     r = EmailRecipient.new
-    r.messageable = email_addresses(:john)
-    assert_nil r.messageable_spec
-    assert_equal email_addresses(:john), r.messageable
+    r.receiver = email_addresses(:john)
+    assert_nil r.receiver_spec
+    assert_equal email_addresses(:john), r.receiver
   end
 end
