@@ -1,2 +1,3 @@
 *SVN*
 
+* Update against latest changes to has_message
